--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodules/storeys"]
 	path = submodules/storeys
-	url = https://github.com/storeys/storeys.git
+	url = git@github.com:storeys/storeys.git
