--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ language: python
 python:
   - "2.7"
 install:
+  - pip install -r requirements.txt
   - pip install -q Django==1.9
 env:
   - DJANGO_VERSION=1.8.2
   - DJANGO_VERSION=1.9
-script: python tests/manage.py test
+script: coverage run tests/manage.py test
+after_success:
+  - coveralls
+
